--- a/copy_past_windows/index.html
+++ b/copy_past_windows/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en-GB">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Тренажёр: копировать и вставить</title>
+  <title>Trainer: Copy and Paste</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
 <div class="container">
 
-  <!-- Только прогресс (как в предыдущем) -->
-  <div class="progress-wrap" aria-label="Прогресс">
+  <!-- Progress only (as in the previous one) -->
+  <div class="progress-wrap" aria-label="Progress">
     <div class="progress-row">
       <div class="progress-text">
-        Прогресс: <b><span id="progressCount">0</span>/<span id="progressTotal">10</span></b>
-        <span class="level">Уровень: <b id="levelText">1</b></span>
+        Progress: <b><span id="progressCount">0</span>/<span id="progressTotal">10</span></b>
+        <span class="level">Level: <b id="levelText">1</b></span>
       </div>
-      <button id="resetBtn" class="ghost" type="button">Сброс</button>
+      <button id="resetBtn" class="ghost" type="button">Reset</button>
     </div>
     <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="10" aria-valuenow="0">
       <div class="progress-fill" id="progressFill"></div>
@@ -25,46 +25,46 @@
   </div>
 
   <div class="main">
-    <button id="startButton" class="primary">СТАРТ</button>
+    <button id="startButton" class="primary">START</button>
 
-    <!-- Строка статуса: заменяется на ВЕРНО/НЕВЕРНО на 2–3 сек -->
-    <div id="statusLine" class="statusLine" style="display:none;">Скопируй и вставь текст:</div>
+    <!-- Status line: replaced with CORRECT/INCORRECT for 2–3 sec -->
+    <div id="statusLine" class="statusLine" style="display:none;">Copy and paste the text:</div>
 
     <div class="game" id="gameContainer" style="display:none;">
       <div class="task">
-        <div class="taskLabel">Текст для копирования:</div>
+        <div class="taskLabel">Text to copy:</div>
         <div id="randomText" class="randomText"></div>
       </div>
 
-      <textarea id="pasteArea" class="pasteArea" placeholder="Вставь сюда (Ctrl+V)"></textarea>
+      <textarea id="pasteArea" class="pasteArea" placeholder="Paste here (Ctrl+V)"></textarea>
 
-      <div id="keyboard" class="keyboard" aria-label="Клавиатура">
+      <div id="keyboard" class="keyboard" aria-label="Keyboard">
         <div class="key" id="ctrlKey">CTRL</div>
         <div class="key" id="cKey">C</div>
         <div class="key" id="vKey">V</div>
       </div>
 
       <div class="hint" id="hint">
-        Подсказка: выдели текст мышкой → <span class="kbd">Ctrl</span>+<span class="kbd">C</span> → кликни в поле → <span class="kbd">Ctrl</span>+<span class="kbd">V</span>
+        Hint: select the text with your mouse → <span class="kbd">Ctrl</span>+<span class="kbd">C</span> → click in the field → <span class="kbd">Ctrl</span>+<span class="kbd">V</span>
       </div>
     </div>
   </div>
 
   <!-- WIN MODAL -->
   <div class="modal-backdrop" id="winModal" aria-hidden="true">
-    <div class="modal" role="dialog" aria-modal="true" aria-label="Победа">
+    <div class="modal" role="dialog" aria-modal="true" aria-label="You Win">
       <div class="modal-header">
-        <div class="modal-title">Победа! 🎉</div>
-        <button class="modal-close" id="closeModal" type="button" aria-label="Закрыть">✕</button>
+        <div class="modal-title">You Win! 🎉</div>
+        <button class="modal-close" id="closeModal" type="button" aria-label="Close">✕</button>
       </div>
 
       <div class="modal-body">
         <div class="win-image" id="winImage"></div>
-        <p class="modal-text">Навык копировать/вставить прокачан!</p>
+        <p class="modal-text">Your copy/paste skill has been levelled up!</p>
       </div>
 
       <div class="modal-actions">
-        <button id="restartButton" class="primary" type="button">РЕСТАРТ</button>
+        <button id="restartButton" class="primary" type="button">RESTART</button>
       </div>
     </div>
   </div>
